[gd_scene load_steps=4 format=2]

[ext_resource path="res://PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://ParallaxBG/Kaph-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 31
font_data = ExtResource( 2 )

[node name="Canvas" type="CanvasLayer"]
layer = 100

[node name="PauseMenuControl" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="PauseMenuControl"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.235294, 0.145098, 0.145098, 0.509804 )

[node name="Resume" type="Button" parent="PauseMenuControl"]
margin_left = 730.0
margin_top = 394.0
margin_right = 1096.0
margin_bottom = 492.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0.996078, 0.537255, 0, 1 )
custom_colors/font_color = Color( 1, 0.694118, 0.0392157, 1 )
custom_colors/font_color_hover = Color( 1, 0.560784, 0, 1 )
custom_colors/font_color_pressed = Color( 0.94902, 0.823529, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "resume"
flat = true

[node name="Settings" type="Button" parent="PauseMenuControl"]
margin_left = 730.0
margin_top = 497.0
margin_right = 1096.0
margin_bottom = 595.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0.996078, 0.537255, 0, 1 )
custom_colors/font_color = Color( 1, 0.694118, 0.0392157, 1 )
custom_colors/font_color_hover = Color( 1, 0.560784, 0, 1 )
custom_colors/font_color_pressed = Color( 0.94902, 0.823529, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "SETTINGS"
flat = true

[node name="ExitToMenu" type="Button" parent="PauseMenuControl"]
margin_left = 730.0
margin_top = 610.0
margin_right = 1096.0
margin_bottom = 708.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0.996078, 0.537255, 0, 1 )
custom_colors/font_color = Color( 1, 0.694118, 0.0392157, 1 )
custom_colors/font_color_hover = Color( 1, 0.560784, 0, 1 )
custom_colors/font_color_pressed = Color( 0.94902, 0.823529, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "EXIT TO MAIN MENU"
flat = true

[connection signal="pressed" from="PauseMenuControl/Resume" to="PauseMenuControl" method="_on_Resume_pressed"]
[connection signal="pressed" from="PauseMenuControl/Settings" to="PauseMenuControl" method="_on_Settings_pressed"]
[connection signal="pressed" from="PauseMenuControl/ExitToMenu" to="PauseMenuControl" method="_on_ExitToMenu_pressed"]
